FontScale fixes and minior update to contraster
FontScale have a big overhaul, now always clamping at 6 steps. index.html has been cleaned up. Contraster now a bit better at displaying text-colors (although Safari night-build is required for this). With this commits I regard this as an (early) beta-version.

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
     accent-color: var(--primary-color);
     padding: 0;
     margin: 0;
+    accent-color: var(--primary-color);
 }
 
 h1, h2, h3 {
@@ -43,6 +44,12 @@ a:link, a:hover, a:active, a:visited {
     text-decoration-thickness: 0.2rem;
 }
 
+input:focus-visible, input:focus {
+   outline: var(--primary-color) solid 2px;
+   /*backdrop-filter: brightness(120%); mabe have this */
+}
+
+
 #dx-main-grid {
     display: grid;
     grid-template-rows: auto;
@@ -54,12 +61,14 @@ a:link, a:hover, a:active, a:visited {
 
 /* ToDo refactor this for color-palette.mjs */
 .color-palette-ref {
-    filter: invert(100%);
+    margin-block-end: 0.2rem;
 }
 .color-palette-value {
-    filter: invert(100%);
+    /*filter: invert(100%);*/
     font-size: 90%;
 }
+
+
 
 
 
